# artik-v4

./: .cursor  .eslintrc.json  .gitignore  DEMO_TODO_APP.md  M0_IMPLEMENTATION_SUMMARY.md  M1_LLM_INTEGRATION.md  M1_MCP_WIRING.md  M1_PLAYWRIGHT_INTEGRATION.md  M2.1_PROJECT_INDEXING_SUMMARY.md  M2_INTELLIGENT_FILE_DISCOVERY.md  MOCK_SANDBOX_IMPLEMENTATION.md  MOCK_SANDBOX_PREVIEW_INTEGRATION.md  QUICKSTART.md  QUICKSTART_MOCK_SANDBOX.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  ui_ux_agent_platform_prd_cursor_expert_prompt.md
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs
apps/web/: next.config.js  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/agent/: page.tsx
apps/web/src/app/api/agent/: route.ts
apps/web/src/app/api/preview/: route.ts
apps/web/src/app/diff/: page.tsx
apps/web/src/app/preview/: page.tsx
apps/web/src/components/: DiffModal.tsx
apps/web/src/lib/: preview-service.ts  screenshot.ts  tauri.ts
examples/todo-app/: README.md  package-lock.json  run-with-mocks.mjs  vite.config.ts
examples/todo-app/src/: App.tsx
examples/vite-sandbox-demo/: index.html  package.json
examples/vite-sandbox-demo/src/: App.tsx
mcp-servers/: README.md
mcp-servers/git/: package.json
mcp-servers/git/src/: index.ts
mcp-servers/package-manager/: package.json
mcp-servers/package-manager/src/: index.ts
mcp-servers/ts-ast/: package.json
mcp-servers/ts-ast/src/: index.ts
(+1 files in other folders)
